--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                     <h3 class="resume-title">Sumary</h3>
                     <div class="resume-item pb-0">
                         <h4>Jean Claude HIRWA</h4>
-                        <p><em>Innovative and deadline-driven Web Designer with 3+ years of experience designing and developing websites and their UI/Ux from initial concept to final, polished deliverable.</em></p>
+                        <p><em>Innovative and deadline-driven Web Designer with 2+ years of experience designing and developing websites from initial concept to final, polished deliverable.</em></p>
                         <p>
                             <ul>
                                 <li>Kigali, Rwanda</li>
@@ -392,7 +392,7 @@
                         <h4>Web Development course ( Two Years)</h4>
                         <h5>2020 - 2022</h5>
                         <p><em>Udemy Course</em></p>
-                        <p>Web developemt with Advanced libralies( Node JS , React JS</p>
+                        <p>Web developemt with Advanced libralies( Node JS , React JS)</p>
                         <p>Progress Web App developemt with web technologies ( FireBase , Python-Django, Mongo DB , Mysql and Microsoft Axure</p>
                     </div>
 
@@ -446,13 +446,6 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-                    <div class="icon-box">
-                        <div class="icon"><i class="bx bx-world"></i></div>
-                        <h4><a href="">Search Engine Optimisation</a></h4>
-
-                    </div>
-                </div>
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                     <div class="icon-box">
