--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="social-links">
                 <a href="https://twitter.com/hirwacl_98" class="twitter"><i class="icofont-twitter"></i></a>
                 <a href="https://www.instagram.com/hirwacl_98/" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="https://wa.me/+250788230853?text=urlencodedtext" class="watsapp"><i class="icofont-watsapp"></i></a>
                 <a href="https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
 
@@ -87,7 +88,6 @@
                         <div class="col-lg-6">
                             <ul>
                                 <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 29 July</li>
-                                <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> null</li>
                                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +250 784745216</li>
                                 <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Kigali, Rwanda</li>
                             </ul>
