--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="social-links">
                 <a href="https://twitter.com/hirwacl_98" class="twitter"><i class="icofont-twitter"></i></a>
                 <a href="https://www.instagram.com/hirwacl_98/" class="instagram"><i class="icofont-instagram"></i></a>
-                <a href="https://wa.me/+250788230853" class="watsapp"><i class="fa fa-whatsapp" aria-hidden="true"></i></a>
+                <a href="https://wa.me/+250788230853" class="watsapp"><i class="icofont-ui-message"></i></a>
                 <a href="https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
 
