--- a/index.html
+++ b/index.html
@@ -326,8 +326,8 @@
             <div class="row">
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-store-line" style="color: #ffbb2c;"></i>
-                        <h3>Cooking</h3>
+                        <i></></i>
+                        <h3>Coding</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 ">
@@ -340,13 +340,13 @@
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="ri-base-station-line" style="color: #ff5828;"></i>
-                        <h3>Cyber Security</h3>
+                        <h3>Connections</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-                        <h3>Life</h3>
+                        <h3>Volunteering</h3>
                     </div>
                 </div>
             </div>
