--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!--  Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
@@ -326,7 +327,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i></></i>
+                        <i class="fa-duotone fa-laptop-code"></i>
                         <h3>Coding</h3>
                     </div>
                 </div>
