--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <!-- .nav-menu -->
 
             <div class="social-links">
-                <a href="https://twitter.com/hirwacl_98" class="twitter"><i class="icofont-twitter"></i></a>
-                <a href="https://www.instagram.com/hirwacl_98/" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="https://twitter.com/hicode_250" class="twitter"><i class="icofont-twitter"></i></a>
+                <a href="https://www.instagram.com/hicode_250/" class="instagram"><i class="icofont-instagram"></i></a>
                 <a href="https://wa.me/+250788230853" class="watsapp"><i class="icofont-ui-message"></i></a>
                 <a href="https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
@@ -511,8 +511,8 @@
                         <i class="bx bx-share-alt"></i>
                         <h3>Social Profiles</h3>
                         <div class="social-links">
-                            <a href="https://twitter.com/hirwacl_98" class="twitter"><i class="icofont-twitter"></i></a>
-                            <a href="https://www.instagram.com/hirwacl_98/" class="instagram"><i class="icofont-instagram"></i></a>
+                            <a href="https://twitter.com/hicode_250" class="twitter"><i class="icofont-twitter"></i></a>
+                            <a href="https://www.instagram.com/hicode_250/" class="instagram"><i class="icofont-instagram"></i></a>
                             <a href=" https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
 
 
