--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
             <!-- .nav-menu -->
 
             <div class="social-links">
-                <a href="https://twitter.com/hicode_250" class="twitter"><i class="icofont-twitter"></i></a>
-                <a href="https://www.instagram.com/hicode_250/" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="https://twitter.com/hicode_io" class="twitter"><i class="icofont-twitter"></i></a>
+                <a href="https://www.instagram.com/hicode_io/" class="instagram"><i class="icofont-instagram"></i></a>
                 <a href="https://wa.me/+250788230853" class="watsapp"><i class="icofont-ui-message"></i></a>
                 <a href="https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
@@ -371,7 +371,7 @@
                             <ul>
                                 <li>Kigali, Rwanda</li>
                                 <li>+(250) 784745216</li>
-                                <li>hirwa.inc@gmail.com</li>
+                                <li>hicode250@gmail.com</li>
                             </ul>
                         </p>
                     </div>
@@ -511,8 +511,8 @@
                         <i class="bx bx-share-alt"></i>
                         <h3>Social Profiles</h3>
                         <div class="social-links">
-                            <a href="https://twitter.com/hicode_250" class="twitter"><i class="icofont-twitter"></i></a>
-                            <a href="https://www.instagram.com/hicode_250/" class="instagram"><i class="icofont-instagram"></i></a>
+                            <a href="https://twitter.com/hicode_io" class="twitter"><i class="icofont-twitter"></i></a>
+                            <a href="https://www.instagram.com/hicode_io/" class="instagram"><i class="icofont-instagram"></i></a>
                             <a href=" https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
 
 
@@ -524,7 +524,7 @@
                     <div class="info-box">
                         <i class="bx bx-envelope"></i>
                         <h3>Email Me</h3>
-                        <p>hirwa.inc@gmail.com</p>
+                        <p>hicode250@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4 d-flex align-items-stretch">
