--- a/index.html
+++ b/index.html
@@ -71,11 +71,6 @@
         <!-- ======= About Me ======= -->
         <div class="about-me container">
 
-            <div class="section-title">
-                <h2>About</h2>
-                <p>Find out more about me</p>
-            </div>
-
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
                     <img src="assets/img/me.jpg" class="img-fluid" alt="" style="border-radius:10px;">
@@ -97,7 +92,7 @@
                             <ul>
 
                                 <li><i class="icofont-rounded-right"></i> <strong>Career:</strong> Full-Stack Web Developer</li>
-                                <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> hirwa.inc@gmail.com</li>
+                                <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> hicode250@gmail.com</li>
                             </ul>
                         </div>
                     </div>
@@ -170,7 +165,13 @@
                     </div>
 
                     <div class="progress">
-                        <span class="skill">React JS - VueJS <i class="val">90%</i></span>
+                        <span class="skill">React JS<i class="val">90%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">React Native <i class="val">87%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
@@ -196,7 +197,12 @@
                         </div>
                     </div>
 
-
+                    <div class="progress">
+                        <span class="skill">Php-Laravel  <i class="val">90%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
                     <div class="progress">
                         <span class="skill">Mysql<i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
@@ -388,14 +394,14 @@
                         <h5>2020 - 2022</h5>
                         <p><em>Udemy Course</em></p>
                         <p>Web developemt with Advanced libralies( Node JS , React JS)</p>
-                        <p>Progress Web App developemt with web technologies ( FireBase , Python-Django, Mongo DB , Mysql and Microsoft Axure</p>
+                        <p>Progress Web App developemt with web technologies ( FireBase , Python-Django,php-laravel, Mongo DB , Mysql and Microsoft Axure</p>
                     </div>
 
                     <div class="resume-item">
                         <h4>Front-End Web Development Zero to Hero (Six months)</h4>
                         <h5>2021 - 2022</h5>
                         <p><em>Udemy Course</em></p>
-                        <p>React Js , Css3 , Html5 , BootStrap, SaaS , VueJS</p>
+                        <p>React Js , Css3 , Html5 , BootStrap, SaaS , React Native</p>
                         <p>Microsoft Axure LP</p>
                     </div>
                     <div class="col-lg-6">
@@ -410,11 +416,6 @@
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
         <div class="container">
-
-            <div class="section-title">
-                <h2>Services</h2>
-                <p>My Services</p>
-            </div>
 
             <div class="row">
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
@@ -468,7 +469,6 @@
                             <div id="smart-button-container">
                                 <div style="text-align: center;">
                                     <div style="margin-bottom: 1.25rem;">
-                                        <h1>Hire me</h1>
                                         <select style="visibility: hidden" id="quantitySelect"></select>
                                     </div>
                                     <div id="paypal-button-container"></div>
