--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
 <div class="credits"> Designed by <a href="#">Jean Claude HIRWA</a>
 </div>
 
-<!-- Vendor JS Files -->
+<!-- Vendor Files -->
 <script src="assets/vendor/jquery/jquery.min.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
