--- a/index.html
+++ b/index.html
@@ -361,11 +361,6 @@
     <section id="resume" class="resume">
         <div class="container">
 
-            <div class="section-title">
-                <h2>Resume</h2>
-                <p>Check My Resume</p>
-            </div>
-
             <div class="row">
                 <div class="col-lg-6">
                     <h3 class="resume-title">Sumary</h3>
@@ -492,7 +487,6 @@
 
             <div class="section-title">
                 <h2>Contact</h2>
-                <p>Contact Me</p>
             </div>
 
             <div class="row mt-2">
@@ -500,7 +494,7 @@
                 <div class="col-md-6 d-flex align-items-stretch">
                     <div class="info-box">
                         <i class="bx bx-map"></i>
-                        <h3>My Address</h3>
+                        <h3>Address</h3>
                         <p>Kigali, Rwanda</p>
                     </div>
                 </div>
