--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Jean Claude HIRWA</title>
+    <title>hicode</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -38,8 +38,8 @@
     <header id="header" class="header-tops">
         <div class="container">
 
-            <h1><a href="#">Jean Claude HIRWA</a></h1>
-            <h2>I'm a passionate <span>Full-Stack Web Developer</span> from Rwanda.</h2>
+            <h1><a href="#">hicode.dev</a></h1>
+            <h2>I'm a passionate <span>Full-Stack Developer</span> from Rwanda.</h2>
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
