--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     <img src="assets/img/me.jpg" class="img-fluid" alt="" style="border-radius:10px;">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <h3>Web developer</h3>
+                    <h3>Software Developer</h3>
                     <p class="font-italic">
-                        I am Experienced Web developer
+                        I am Experienced Software Developer
                     </p>
                     <div class="row">
                         <div class="col-lg-6">
@@ -90,7 +90,7 @@
                         <div class="col-lg-6">
                             <ul>
 
-                                <li><i class="icofont-rounded-right"></i> <strong>Career:</strong> Full-Stack Web Developer</li>
+                                <li><i class="icofont-rounded-right"></i> <strong>Career:</strong> Software Developer</li>
                                 <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> hicode250@gmail.com</li>
                             </ul>
                         </div>
