--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
 
             <h1><a href="#">hicode.dev</a></h1>
-            <h2>I'm a passionate <span>Full-Stack Developer</span> from Rwanda.</h2>
+            <h2>I'm a passionate <span>Software Developer</span> from Rwanda.</h2>
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
