--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                     <img src="assets/img/me2.png" class="img-fluid" alt="" style="border-radius:10px;">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <h3>Software Developer</h3>
+                    <h3>Summary</h3>
                     <p class="font-italic">
-                        I am Experienced Software Developer
+                        I am an experienced software developer.
                     </p>
                     <div class="row">
                         <div class="col-lg-6">
