--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <h3 class="resume-title">Sumary</h3>
                     <div class="resume-item pb-0">
                         <h4>Jean Claude HIRWA</h4>
-                        <p><em>Innovative and deadline-driven Web Designer with 2+ years of experience designing and developing websites from initial concept to final, polished deliverable.</em></p>
+                        <p><em>Innovative and deadline-driven Web Designer with 4+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
                         <p>
                             <ul>
                                 <li>Kigali, Rwanda</li>
