--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
-                        <h4>Computer and Software Engineering</h4>
+                        <h4>Computer and Software Engineering (@uni_Rwanda)</h4>
                         <h5>2019 - Now</h5>
                     </div>
 
