--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 </div>
 
 
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-slideshow"></i></div>
                         <h4><a href="">Management System Development</a></h4>
