--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-file"></i></div>
-                        <h4><a href="">Web developemnt and Re-design</a></h4>
+                        <h4><a href="">Web developemnt</a></h4>
                         <p>I develop website from the scratch or redesign other website By updating technologies or design</p>
                     </div>
                 </div>
