--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-file"></i></div>
                         <h4><a href="">Web developemnt</a></h4>
@@ -363,23 +363,20 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-                    <div class="icon-box">
-                        <div class="icon"><i class="bx bx-tachometer"></i></div>
-                        <h4><a href="">Database Developemt</a></h4>
-                        <p></p>
-                    </div>
-                </div>
-
-
-                <div class="col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-slideshow"></i></div>
                         <h4><a href="">Management System Development</a></h4>
                         <p>Stock management System , Schools management System , Rental MS and others</p>
                     </div>
                 </div>
-
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bx bx-tachometer"></i></div>
+                        <h4><a href="">Database Developemt</a></h4>
+                        <p></p>
+                    </div>
+                </div>
             </div>
             <div class="row">
                 <div class="col-sm-12">
