--- a/index.html
+++ b/index.html
@@ -307,17 +307,6 @@
 
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="resume-item pb-0">
-                        <h4>Jean Claude HIRWA</h4>
-                        <p><em>Innovative and deadline-driven Web Designer with 4+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
-                        <p>
-                            <ul>
-                                <li>Kigali, Rwanda</li>
-                                <li>+(250) 784745216</li>
-                                <li>hicode250@gmail.com</li>
-                            </ul>
-                        </p>
-                    </div>
 
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
@@ -343,6 +332,19 @@
                     </div>
                     <div class="col-lg-6">
 
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="resume-item pb-0">
+                        <h4>Jean Claude HIRWA</h4>
+                        <p><em>Innovative and deadline-driven Web Designer with 4+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
+                        <p>
+                            <ul>
+                                <li>Kigali, Rwanda</li>
+                                <li>+(250) 784745216</li>
+                                <li>hicode250@gmail.com</li>
+                            </ul>
+                        </p>
                     </div>
                 </div>
 
