--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="resume-item pb-0">
-                        <h3 class="resume-title"></h3>
+                        <h3 class="resume-title">!! Important</h3>
                         <h4>Jean Claude HIRWA</h4>
                         <p><em>Innovative and deadline-driven Web Designer with 4+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
                         <p>
