--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="resume-title"></h3>
+                    <h3 class="resume-title">hicode.dev</h3>
                     <div class="resume-item pb-0">
                         <h4>Jean Claude HIRWA</h4>
                         <p><em>Innovative and deadline-driven Web Designer with 4+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
