--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>hicode</title>
+    <title>hicodev</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -38,7 +38,7 @@
     <header id="header" class="header-tops">
         <div class="container">
 
-            <h1><a href="#">hicode.dev</a></h1>
+            <h1><a href="#">hicodev</a></h1>
             <h2>I'm a passionate <span>Software Developer</span> from Rwanda.</h2>
 
             <nav class="nav-menu d-none d-lg-block">
@@ -54,8 +54,8 @@
             <!-- .nav-menu -->
 
             <div class="social-links">
-                <a href="https://twitter.com/hicode_io" class="twitter"><i class="icofont-twitter"></i></a>
-                <a href="https://www.instagram.com/hicode_io/" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="https://twitter.com/hicodev" class="twitter"><i class="icofont-twitter"></i></a>
+                <a href="https://www.instagram.com/hicodev.rw/" class="instagram"><i class="icofont-instagram"></i></a>
                 <a href="https://wa.me/+250788230853" class="watsapp"><i class="icofont-ui-message"></i></a>
                 <a href="https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
@@ -335,7 +335,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="resume-title">hicode.dev</h3>
+                    <h3 class="resume-title">hicodev</h3>
                     <div class="resume-item pb-0">
                         <h4>Jean Claude HIRWA</h4>
                         <p><em>Innovative and deadline-driven Web Designer with 4+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
@@ -431,8 +431,8 @@
                         <i class="bx bx-share-alt"></i>
                         <h3>Social Profiles</h3>
                         <div class="social-links">
-                            <a href="https://twitter.com/hicode_io" class="twitter"><i class="icofont-twitter"></i></a>
-                            <a href="https://www.instagram.com/hicode_io/" class="instagram"><i class="icofont-instagram"></i></a>
+                            <a href="https://twitter.com/hicodev" class="twitter"><i class="icofont-twitter"></i></a>
+                            <a href="https://www.instagram.com/hicodev.rw/" class="instagram"><i class="icofont-instagram"></i></a>
                             <a href=" https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
 
 
