--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>hicode</title>
+    <title>Jean Claude HIRWA</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -38,8 +38,8 @@
     <header id="header" class="header-tops">
         <div class="container">
 
-            <h1><a href="#">hicode.dev</a></h1>
-            <h2>I'm a passionate <span>Software Developer</span> from Rwanda.</h2>
+            <h1><a href="#">Jean Claude HIRWA (hicode) </a></h1>
+            <h2>I'm a passionate <span>Software engineer</span> from Rwanda.</h2>
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
@@ -54,8 +54,8 @@
             <!-- .nav-menu -->
 
             <div class="social-links">
-                <a href="https://twitter.com/hicode_io" class="twitter"><i class="icofont-twitter"></i></a>
-                <a href="https://www.instagram.com/hicode_io/" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="https://twitter.com/hicodev" class="twitter"><i class="icofont-twitter"></i></a>
+                <a href="https://www.instagram.com/hicode.rw/" class="instagram"><i class="icofont-instagram"></i></a>
                 <a href="https://wa.me/+250788230853" class="watsapp"><i class="icofont-ui-message"></i></a>
                 <a href="https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
@@ -77,20 +77,20 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Summary</h3>
                     <p class="font-italic">
-                        I am an experienced software developer.
+                        I am an experienced software engineer.
                     </p>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
-                                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 29 July</li>
-                                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +250 784745216</li>
-                                <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Kigali, Rwanda</li>
+                                <li><i class="icofont-rounded-right"></i> <strong>Experience:</strong> 4+ years</li>
+                                <li><i class="icofont-rounded-right"></i> <strong>Category:</strong> Full stack</li>
+                                <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +250 788 230 853</li>
                             </ul>
                         </div>
                         <div class="col-lg-6">
                             <ul>
-
-                                <li><i class="icofont-rounded-right"></i> <strong>Career:</strong> Software Developer</li>
+                                <li><i class="icofont-rounded-right"></i> <strong>Career:</strong> Software engineer</li>
+                                <li><i class="icofont-rounded-right"></i> <strong>Github:</strong> hicodev-rw</li>
                                 <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> hicode250@gmail.com</li>
                             </ul>
                         </div>
@@ -117,7 +117,7 @@
                 <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
                     <div class="count-box">
                         <i class="icofont-document-folder"></i>
-                        <span data-toggle="counter-up">54</span>
+                        <span data-toggle="counter-up">99</span>
                         <p>Projects</p>
                     </div>
                 </div>
@@ -125,7 +125,7 @@
                 <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
                     <div class="count-box">
                         <i class="icofont-live-support"></i>
-                        <span data-toggle="counter-up">580</span>
+                        <span data-toggle="counter-up">1580</span>
                         <p>Hours Of Support</p>
                     </div>
                 </div>
@@ -134,7 +134,7 @@
                     <div class="count-box">
                         <i class="icofont-users-alt-5"></i>
                         <span data-toggle="counter-up">72</span>
-                        <p>Community i am in</p>
+                        <p>Communities</p>
                     </div>
                 </div>
 
@@ -244,21 +244,7 @@
                             <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-
-
-
-
-
-
                 </div>
- 
-
-                    
-
-
-
-
-
                 </div>
 
             </div>
@@ -274,9 +260,15 @@
             </div>
 
             <div class="row">
+                <div class="col-lg-3 col-md-4 mt-4">
+                    <div class="icon-box">
+                        <i class="ri-bar-chart-box-line" style="color: #ff5828;"></i>
+                        <h3>Business</h3>
+                    </div>
+                </div>
                 <div class="col-lg-3 col-md-4 mt-4 ">
                     <div class="icon-box">
-                        <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
+                        <i class="ri-fingerprint-line" style="color: #5578ff;"></i>
                         <h3>Sports</h3>
                     </div>
                 </div>
@@ -284,7 +276,7 @@
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
                         <i class="ri-base-station-line" style="color: #ff5828;"></i>
-                        <h3>Connections</h3>
+                        <h3>Networking</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
@@ -335,14 +327,14 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <h3 class="resume-title">hicode.dev</h3>
+                    <h3 class="resume-title">Summary</h3>
                     <div class="resume-item pb-0">
                         <h4>Jean Claude HIRWA</h4>
                         <p><em>Innovative and deadline-driven Web Designer with 4+ years of experience designing and developing software solutions from initial concept to final, polished deliverable.</em></p>
                         <p>
                             <ul>
                                 <li>Kigali, Rwanda</li>
-                                <li>+(250) 784745216</li>
+                                <li>+(250) 788 230 853</li>
                                 <li>hicode250@gmail.com</li>
                             </ul>
                         </p>
@@ -428,11 +420,12 @@
 
                 <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
                     <div class="info-box">
-                        <i class="bx bx-share-alt"></i>
-                        <h3>Social Profiles</h3>
+                        <i class="bx bx-link"></i>
+                        <h3>Connect</h3>
                         <div class="social-links">
-                            <a href="https://twitter.com/hicode_io" class="twitter"><i class="icofont-twitter"></i></a>
-                            <a href="https://www.instagram.com/hicode_io/" class="instagram"><i class="icofont-instagram"></i></a>
+                            <a href="https://github.com/hicodev-rw" class="github"><i class="icofont-github"></i></a>
+                            <a href="https://twitter.com/hicodev" class="twitter"><i class="icofont-twitter"></i></a>
+                            <a href="https://www.instagram.com/hicode.rw/" class="instagram"><i class="icofont-instagram"></i></a>
                             <a href=" https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
 
 
@@ -443,15 +436,15 @@
                 <div class="col-md-6 mt-4 d-flex align-items-stretch">
                     <div class="info-box">
                         <i class="bx bx-envelope"></i>
-                        <h3>Email Me</h3>
+                        <h3>Mail</h3>
                         <p>hicode250@gmail.com</p>
                     </div>
                 </div>
                 <div class="col-md-6 mt-4 d-flex align-items-stretch">
                     <div class="info-box">
                         <i class="bx bx-phone-call"></i>
-                        <h3>Call Me</h3>
-                        <p>+250 784 745 216</p>
+                        <h3>Call</h3>
+                        <p>+250 788 230 853</p>
                     </div>
                 </div>
             </div>
