--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                         <div class="social-links">
                             <a href="https://github.com/hicodev-rw" class="github"><i class="icofont-github"></i></a>
                             <a href="https://twitter.com/hicodev" class="twitter"><i class="icofont-twitter"></i></a>
-                            <a href="https://www.instagram.com/hicode.rw/" class="instagram"><i class="icofont-instagram"></i></a>
+                            <a href="https://www.instagram.com/hicodev.rw/" class="instagram"><i class="icofont-instagram"></i></a>
                             <a href=" https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
 
 
