--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta content="" name="description">
     <meta content="" name="keywords">
 
-    <link href="assets/img/me.jpg" rel="icon">
-    <link href="assets/img/me.jpg" rel="apple-touch-icon">
+    <link href="assets/img/me.png" rel="icon">
+    <link href="assets/img/me.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
 
