--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <!--  Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
-    <!-- =======================================================
-  *  Name: JC HIRWA template
+<!-- =======================================================
+  *  Name: portofolio
   * Author: Jean Claude HIRWA
   ======================================================== -->
 </head>
