--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-tachometer"></i></div>
                         <h4><a href="">Database Developemt</a></h4>
-                        <p></p>
+                        <p>I specialize in building databases from the ground up and rejuvenating existing databases by implementing advanced technologies and enhancing their design.</p>
                     </div>
                 </div>
             </div>
