--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
     </section>
     <!-- End Contact Section -->
 
-    <div class="credits"> Designed by <a href="assets/hicode.apk">Jean Claude HIRWA</a>
+    <div class="credits"> Download app<a href="assets/hicode.apk"> (android)</a>
     </div>
 
     <!-- Vendor JS Files -->
