--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 </section>
 <!-- End Contact Section -->
 
-<div class="credits"> Designed by <a href="#">Jean Claude HIRWA</a>
+<div class="credits"> Download <a href="assets/hicode.apk"> Android app</a>
 </div>
 
 <!-- Vendor Files -->
