--- a/index.html
+++ b/index.html
@@ -155,12 +155,29 @@
                 <div class="col-lg-6">
                     <h3>Front-End Development</h3>
                     <div class="progress">
-                        <span class="skill">HTML5 - Css3 - Complex Javascript -SaaS<i class="val">100%</i></span>
+                        <span class="skill">HTML5<i class="val">100%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-
+                    <div class="progress">
+                        <span class="skill">Css3<i class="val">95%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">Javascript<i class="val">90%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <span class="skill">SaaS<i class="val">84%</i></span>
+                        <div class="progress-bar-wrap">
+                            <div class="progress-bar" role="progressbar" aria-valuenow="84" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
                     <div class="progress">
                         <span class="skill">React JS<i class="val">90%</i></span>
                         <div class="progress-bar-wrap">
