--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
     </section>
     <!-- End Contact Section -->
 
-    <div class="credits"> Download <a href="assets/hicode.apk"> Android app</a>
+<!--     <div class="credits"> Download <a href="assets/hicode.apk"> Android app</a> -->
     </div>
 
     <!-- Vendor JS Files -->
@@ -516,7 +516,7 @@
 </section>
 <!-- End Contact Section -->
 
-<div class="credits"> Download <a href="assets/hicode.apk"> Android app</a>
+<!-- <div class="credits"> Download <a href="assets/hicode.apk"> Android app</a> -->
 </div>
 
 <!-- Vendor Files -->
