--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div class="social-links">
                 <a href="https://twitter.com/hicodev" class="twitter"><i class="icofont-twitter"></i></a>
-                <a href="https://www.instagram.com/hicode.rw/" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="https://www.instagram.com/hicodev.rw/" class="instagram"><i class="icofont-instagram"></i></a>
                 <a href="https://wa.me/+250788230853" class="watsapp"><i class="icofont-ui-message"></i></a>
                 <a href="https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
