--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         Explore my portfolio to discover the projects that showcase my technical prowess and creativity. Whether you're a fellow developer, a potential employer, or someone interested in the digital landscape, I invite you to delve into my work and witness the impact of my dedication to the world of software engineering.
                     </p>
 
-                    <div class="row">
+                    <!-- <div class="row">
                         <div class="col-lg-6">
                             <ul>
                                 <li><i class="icofont-rounded-right"></i> <strong>Experience:</strong> 4+ years</li>
@@ -104,7 +104,7 @@
                                 <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> hicode250@gmail.com</li>
                             </ul>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
 
