--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="container">
 
             <h1><a href="#">Jean Claude HIRWA (Hicode) </a></h1>
-            <h2>I'm a passionate <span>Software engineer</span> from Rwanda.</h2>
+            <h2>I'm a passionate <span>Software engineer</span> based in Rwanda.</h2>
 
             <nav class="nav-menu d-none d-lg-block">
                 <ul>
