--- a/index.html
+++ b/index.html
@@ -391,8 +391,12 @@
 
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
-                        <h4>Computer and Software Engineering (@uni_Rwanda)</h4>
-                        <h5>2019 - Now</h5>
+                        <h4>Msc EAI (Carnegie Mellon University)</h4>
+                        <h5>2024 - Now</h5>
+                    </div>
+                    <div class="resume-item">
+                        <h4>Computer and Software Engineering (University of Rwanda)</h4>
+                        <h5>2019 - 2024</h5>
                     </div>
 
 
