--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
                     <h3 class="resume-title">Education</h3>
                     <div class="resume-item">
-                        <h4>Msc EAI (Carnegie Mellon University)</h4>
+                        <h4>Master of Science in Engineering Artificial Intelligence (Carnegie Mellon University)</h4>
                         <h5>2024 - Now</h5>
                     </div>
                     <div class="resume-item">
