--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <!-- .nav-menu -->
 
             <div class="social-links">
-                <a href="https://twitter.com/hicode_jc" class="twitter"><i class="icofont-twitter"></i></a>
-                <a href="https://www.instagram.com/hicode_jc" class="instagram"><i class="icofont-instagram"></i></a>
+                <a href="https://twitter.com/cjhirwa" class="twitter"><i class="icofont-twitter"></i></a>
+                <a href="https://www.instagram.com/cjhirwa" class="instagram"><i class="icofont-instagram"></i></a>
                 <a href="https://wa.me/+250788230853" class="watsapp"><i class="icofont-ui-message"></i></a>
-                <a href="https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/cjhirwa/" class="linkedin"><i class="icofont-linkedin"></i></a>
             </div>
 
         </div>
@@ -559,9 +559,9 @@
                         <h3>Connect</h3>
                         <div class="social-links">
                             <a href="https://github.com/hicodev-rw" class="github"><i class="icofont-github"></i></a>
-                            <a href="https://twitter.com/hicode_jc" class="twitter"><i class="icofont-twitter"></i></a>
-                            <a href="https://www.instagram.com/hicode_jc" class="instagram"><i class="icofont-instagram"></i></a>
-                            <a href=" https://www.linkedin.com/in/jean-claude-hirwa-937b59167/" class="linkedin"><i class="icofont-linkedin"></i></a>
+                            <a href="https://twitter.com/cjhirwa" class="twitter"><i class="icofont-twitter"></i></a>
+                            <a href="https://www.instagram.com/cjhirwa" class="instagram"><i class="icofont-instagram"></i></a>
+                            <a href=" https://www.linkedin.com/in/cjhirwa/" class="linkedin"><i class="icofont-linkedin"></i></a>
 
 
                         </div>
