--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 
-    <title>Hicode</title>
+    <title>cjhirwa</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -22,7 +22,7 @@
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    
     <!--  Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet">
 
@@ -38,7 +38,7 @@
     <header id="header" class="header-tops">
         <div class="container">
 
-            <h1><a href="#">J. Claude HIRWA - Hicode </a></h1>
+            <h1><a href="#">Jean Claude Hirwa</a></h1>
             <h2>I'm a passionate <span>Software engineer</span> based in Rwanda.</h2>
 
             <nav class="nav-menu d-none d-lg-block">
