--- a/index.html
+++ b/index.html
@@ -645,6 +645,7 @@
 
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
+    <script src="//code.tidio.co/xdyoj9ocgqbo5ae7ddjbmz2e4gmzl2jf.js" async></script>
 
 </body>
 
