--- a/index.html
+++ b/index.html
@@ -646,6 +646,8 @@
     <!-- Template Main JS File -->
     <script src="assets/js/main.js"></script>
     <script src="//code.tidio.co/xdyoj9ocgqbo5ae7ddjbmz2e4gmzl2jf.js" async></script>
+    <script async type='module' src='https://interfaces.zapier.com/assets/web-components/zapier-interfaces/zapier-interfaces.esm.js'></script>
+    <zapier-interfaces-chatbot-embed is-popup='false' chatbot-id='cmbgd9h820010xh3ug416ipdi' height='600px' width='400px'></zapier-interfaces-chatbot-embed>
 
 </body>
 
