--- a/index.html
+++ b/index.html
@@ -522,39 +522,37 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-cog"></i></div>
                         <h4><a href="#">SkyNet – Intelligent Business Management</a></h4>
-                        <p>Designed an integrated platform that automates inventory, invoicing, and performance tracking using AI-driven insights to streamline business operations.</p>
+                        <p>An integrated platform that automates inventory, invoicing, and performance tracking using AI-driven insights to streamline business operations.</p>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-brain"></i></div>
                         <h4><a href="#">AI-Powered Customer Support Bot</a></h4>
-                        <p>Built a natural language processing chatbot using Python and Transformer models to automate customer support and reduce response time by 60%.</p>
+                        <p>A natural language processing chatbot using Python and Transformer models to automate customer support and reduce response time by 60%.</p>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-line-chart"></i></div>
                         <h4><a href="#">Real-Time Stock Prediction System</a></h4>
-                        <p>Implemented a machine learning system to predict stock price trends using time-series analysis and streaming data from financial APIs.</p>
+                        <p>A machine learning system to predict stock price trends using time-series analysis and streaming data from financial APIs.</p>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-map"></i></div>
                         <h4><a href="#">Geospatial Analytics for Urban Planning</a></h4>
                         <p>Leveraged GIS data and spatial machine learning techniques to support city planning decisions by identifying infrastructure gaps and growth patterns.</p>
                     </div>
                 </div>
-
-
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
                     <div class="icon-box">
