--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-analyse"></i></div>
                         <h4><a href="#">Business Analytics Dashboard</a></h4>
-                        <p>Developed an interactive dashboard for businesses to visualize sales, customer trends, and operational KPIs using modern data visualization tools.</p>
+                        <p>An interactive dashboard for businesses to visualize sales, customer trends, and operational KPIs using modern data visualization tools.</p>
                     </div>
                 </div>
 
