--- a/index.html
+++ b/index.html
@@ -598,7 +598,7 @@
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-building-house"></i></div>
                         <h4><a href="#">Hotel Reservation System</a></h4>
-                        <p>Designed an online platform for hotel booking, room management, and customer communications for the hospitality sector.</p>
+                        <p>An online platform for hotel booking, room management, and customer communications for the hospitality sector.</p>
                     </div>
                 </div>
             </div>
