--- a/index.html
+++ b/index.html
@@ -466,21 +466,21 @@
                         <p>I specialize in building databases from the ground up and rejuvenating existing databases by implementing advanced technologies and enhancing their design.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-mobile"></i></div>
                         <h4><a href="">Mobile Developemt</a></h4>
                         <p>I specialize in crafting mobile applications from inception to completion, leveraging cutting-edge technologies to rejuvenate existing apps and enhance their design. My expertise lies in creating seamless and innovative mobile experiences, whether building applications from scratch or revitalizing existing ones through the implementation of advanced mobile development techniques.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-clipboard"></i></div>
                         <h4><a href="">AI Models</a></h4>
                         <p>I specialize in developing AI models that drive innovation in different applications. From conceptualization to deployment, I leverage advanced technologies to create intelligent and adaptive features. Whether building AI-powered applications from the ground up or enhancing existing ones, I am dedicated to pushing the boundaries of development through the implementation of sophisticated AI models and algorithms.</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-user"></i></div>
                         <h4><a href="">Consultancy</a></h4>
@@ -570,13 +570,13 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+                <!-- <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-credit-card"></i></div>
                         <h4><a href="#">ITECPAY</a></h4>
                         <p>Secure and scalable payment solution built at <strong><a href="https://itec.rw" target="_blank">ITEC Ltd</a></strong>, facilitating transactions for businesses and individuals.</p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
                     <div class="icon-box">
