--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                     <div class="icon-box">
                         <div class="icon"><i class="bx bx-credit-card"></i></div>
                         <h4><a href="#">ITECPAY</a></h4>
-                        <p>Secure and scalable payment solution built at <strong><a href="https://itec.rw" target="_blank">ITEC Ltd</a></strong>, facilitating transactions for businesses and individuals.</p>
+                        <p>A payment solution built at <strong><a href="https://itec.rw" target="_blank">ITEC Ltd</a></strong>, facilitating transactions for businesses and individuals.</p>
                     </div>
                 </div>
 
