--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 
-    <title>cjhirwa</title>
+    <title>J.C. Hirwa</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
