--- a/index.html
+++ b/index.html
@@ -352,27 +352,27 @@
             <div class="row">
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-bar-chart-box-line" style="color: #ff5828;"></i>
+                        <i class="ri-bar-chart-box-line" style="color: #29cc61;"></i>
                         <h3>Business</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 ">
                     <div class="icon-box">
-                        <i class="ri-fingerprint-line" style="color: #5578ff;"></i>
-                        <h3>Sports</h3>
+                        <i class="ri-refresh-line" style="color: #29cc61;"></i>
+                        <h3>Automation</h3>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-base-station-line" style="color: #ff5828;"></i>
-                        <h3>Networking</h3>
+                        <i class="ri-base-station-line" style="color: #29cc61;"></i>
+                        <h3>Systems</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
                     <div class="icon-box">
-                        <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-                        <h3>Volunteering</h3>
+                        <i class="ri-book-line" style="color: #29cc61;"></i>
+                        <h3>Learning</h3>
                     </div>
                 </div>
             </div>
