--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a href="https://www.github.com/hicodev-rw/" title="Github" class="github" target="_blank"><i class="icofont-terminal"></i></a>
                 <a href="mailto:cjhirwa@gmail.com" title="Gmail" class="gmail" target="_blank"><i class="icofont-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/cjhirwa/" title="LinkedIn" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></a>
-                <a href="https://www.medium.com/in/cjhirwa/" title="Medium" class="medium" target="_blank"><i class="icofont-newspaper"></i></a>
+                <a href="https://www.medium.com/@cjhirwa/" title="Medium" class="medium" target="_blank"><i class="icofont-newspaper"></i></a>
                 <a href="https://wa.me/+250788230853" title="WhatsApp" class="watsapp" target="_blank"><i class="icofont-whatsapp"></i></a>
                 <a href="tel:+250788230853" title="Call" class="call" target="_blank"><i class="icofont-phone"></i></a>
             </div>
