--- a/index.html
+++ b/index.html
@@ -45,15 +45,16 @@
                     <li class="active"><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#resume">Resume</a></li>
+                    <li><a href="#pub">Publications</a></li>
                     <li><a href="#services">Services</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <!-- <li><a href="#contact">Contact</a></li> -->
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
             <!-- .nav-menu -->
 
             <div class="social-links">
-                <a href="https://www.github.com/hicodev-rw/" title="Github" class="github" target="_blank"><i class="icofont-terminal"></i></a>
+                <a href="https://www.github.com/cjhirwa/" title="Github" class="github" target="_blank"><i class="icofont-terminal"></i></a>
                 <a href="mailto:cjhirwa@gmail.com" title="Gmail" class="gmail" target="_blank"><i class="icofont-envelope"></i></a>
                 <a href="https://www.linkedin.com/in/cjhirwa/" title="LinkedIn" class="linkedin" target="_blank"><i class="icofont-linkedin"></i></a>
                 <a href="https://www.medium.com/in/cjhirwa/" title="Medium" class="medium" target="_blank"><i class="icofont-newspaper"></i></a>
@@ -67,6 +68,9 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
         <div class="about-me container">
+            <div class="section-title">
+                <h2>About</h2>
+            </div>
             <div class="row">
                 <div class="col-lg-4" data-aos="fade-right">
                     <img src="assets/img/me23.jpg" class="img-fluid" alt="" style="border-radius:10px;">
@@ -365,6 +369,9 @@
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
         <div class="container">
+            <div class="section-title">
+                <h2>Resume</h2>
+            </div>
             <a href="./assets/resume/Jean_Claude_Hirwa_Rwanda_Resume_v1.pdf" download class="" title="Download Resume"><i class="icofont-download"></i> Download</a>
             <div class="row">
                 <div class="col-lg-6">
@@ -420,6 +427,21 @@
                     <div class="col-lg-6">
 
                     </div>
+                </div>
+            </div>
+    </section>
+    <!-- End Resume Section -->
+
+    <!-- ======= Resume Section ======= -->
+    <section id="pub" class="publication">
+        <div class="container">
+            <div class="section-title">
+                <h2>Publications</h2>
+                <h4>Coming soon...</h4>
+            </div>
+            
+            <div class="row">
+                
                 </div>
             </div>
     </section>
