--- a/index.html
+++ b/index.html
@@ -440,10 +440,8 @@
                 <h2>Publications</h2>
                 <h4>Coming soon...</h4>
             </div>
-            
-            <div class="row">
-                
-                </div>
+
+            <div class="row" style="min-height: 80vh;">
             </div>
     </section>
     <!-- End Resume Section -->
